# Minigolf

./: .editorconfig  Cargo.toml
.github/workflows/: build.yml
assets/: Course1.glb  Course2.glb  Entities.glb  Level2.glb  Player.glb  config.scn.ron
assets/courses/: 0002.scn.ron
minigolf/: Cargo.toml
minigolf/src/: lib.rs  lobby.rs  replication.rs
minigolf/src/lobby/: game.rs  mod.rs  user.rs
minigolf_client/: Cargo.toml
minigolf_client/assets/: Level1.glb
minigolf_client/src/: main.rs  network.rs  ui.rs
minigolf_client/src/input/: camera.rs  mod.rs
minigolf_client/src/ui/: dev.rs  lobby.rs  lobby_select.rs  lobby_server.rs  mod.rs  power_ups.rs
minigolf_lobby/: Cargo.toml
minigolf_lobby/src/: game.rs  main.rs  user.rs
minigolf_server/: Cargo.toml
minigolf_server/assets/: Level1.glb
minigolf_server/src/: main.rs  network.rs  server.rs
minigolf_server/src/config/: dev.rs  headless.rs  mod.rs
minigolf_server/src/course/: mod.rs  power_ups.rs  setup.rs
minigolf_server/src/course/entities/: mod.rs
minigolf_server/src/network/: listeners.rs  mod.rs
