[workspace]
resolver = "2"
members = ["minigolf", "minigolf_client", "minigolf_lobby", "minigolf_server"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Valters Melnalksnis"]

[workspace.dependencies]
bevy = { version = "0.15.3", default-features = true }
bevy_egui = { version = "0.33.0", default-features = false }
bevy_replicon = { version = "0.31.1", default-features = false }
bevy-inspector-egui = { version = "0.30.0", default-features = false }
iyes_perf_ui = { version = "0.4.0" }

avian3d = { version = "0.2.1", default-features = false }

aeronet = { version = "0.12.0", default-features = false }
aeronet_websocket = { version = "0.12.0", default-features = false }
aeronet_webtransport = { version = "0.12.0", default-features = false }
aeronet_replicon = { version = "0.13.0", default-features = false }

serde = "1.0.219"
serde_json = "1.0.140"

clap = "4.5.32"

web-sys = { version = "0.3.77", default-features = false }
uuid = { version = "1.12.1", default-features = false }
rand = { version = "0.9.1", default-features = false }

[patch.crates-io]
wtransport = { git = "https://github.com/BiagioFesta/wtransport" }
aeronet = { git = "https://github.com/aecsocket/aeronet" }
aeronet_websocket = { git = "https://github.com/aecsocket/aeronet" }
aeronet_webtransport = { git = "https://github.com/aecsocket/aeronet" }
aeronet_replicon = { git = "https://github.com/aecsocket/aeronet" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "fat"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "z"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
