[package]
name = "minigolf"

version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
bevy = { workspace = true, features = ["serialize"] }
bevy_replicon = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
rand = { workspace = true }
