[package]
name = "minigolf_client"

version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
minigolf = { path = "../minigolf" }

bevy = { workspace = true }
bevy_egui = { workspace = true, features = ["manage_clipboard"] }
bevy-inspector-egui = { workspace = true, features = ["bevy_render"] }
iyes_perf_ui = { workspace = true }

aeronet = { workspace = true, features = [] }
aeronet_websocket = { workspace = true, features = ["client"] }
aeronet_webtransport = { workspace = true, features = ["client", "dangerous-configuration"] }

bevy_replicon = { workspace = true, features = ["client", "parent_sync"] }
aeronet_replicon = { workspace = true, features = ["client"] }
web-sys = { workspace = true, features = ["Window", "Document", "Element", "HtmlCanvasElement", "CssStyleDeclaration"] }
