[package]
name = "minigolf_client"

version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
minigolf = { path = "../minigolf" }

bevy = { workspace = true, features = ["bevy_picking"] }
bevy_egui = { workspace = true, features = ["manage_clipboard"] }

aeronet = { workspace = true }
aeronet_websocket = { workspace = true, features = ["client"] }
aeronet_webtransport = { workspace = true, features = ["client", "dangerous-configuration"] }

bevy_replicon = { workspace = true, features = ["client"] }
aeronet_replicon = { workspace = true, features = ["client"] }
web-sys = { workspace = true, features = ["Window", "Document", "Element", "HtmlCanvasElement", "CssStyleDeclaration"] }
