[package]
name = "minigolf_server"

version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
minigolf = { path = "../minigolf" }

bevy = { workspace = true }
avian3d = { workspace = true, features = ["3d", "f32", "default-collider", "parry-f32", "bevy_scene", "bevy_picking", "debug-plugin", "parallel", "simd", "collider-from-mesh"] }
clap = { workspace = true, features = ["derive"] }

aeronet = { workspace = true }
aeronet_websocket = { workspace = true, features = ["server", "client"] }
aeronet_webtransport = { workspace = true, features = ["server"] }

bevy_replicon = { workspace = true, features = ["server"] }
aeronet_replicon = { workspace = true, features = ["server"] }

serde_json = { workspace = true }