[package]
name = "minigolf_server"

version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
minigolf = { path = "../minigolf" }

bevy = { workspace = true }
avian3d = { workspace = true, features = ["3d", "f64", "default-collider", "parry-f64", "bevy_scene", "bevy_picking", "debug-plugin", "parallel", "collider-from-mesh", "simd"] }
clap = { workspace = true, features = ["derive"] }

aeronet = { workspace = true }
aeronet_websocket = { workspace = true, features = ["server", "client"] }
aeronet_webtransport = { workspace = true, features = ["server"] }

bevy_replicon = { workspace = true, features = ["server"] }
aeronet_replicon = { workspace = true, features = ["server"] }
rand = { workspace = true }

bevy_egui = { workspace = true, optional = true }
bevy-inspector-egui = { workspace = true, optional = true }
egui = { workspace = true, optional = true }
egui_dock = { workspace = true, optional = true }
transform-gizmo-egui = { workspace = true, optional = true }

[features]
dynamic_linking = ["bevy/dynamic_linking"]
ui = ["bevy_egui", "bevy-inspector-egui", "egui", "egui_dock", "transform-gizmo-egui", "bevy/file_watcher", "bevy/track_location"]
